// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Renders correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiContainer-root-7 WithStyles(ForwardRef(Container))-root-6 MuiContainer-maxWidthLg-13"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-9-60 MuiGrid-grid-md-8-87 MuiGrid-grid-lg-9-102"
        >
          <div
            class="MuiGrid-root-17 makeStyles-badgerIconContainer-15 MuiGrid-item-19"
          >
            <img
              alt="Badger Logo"
              class="makeStyles-badgerIcon-16"
              src="/assets/icons/badger_head.svg"
            />
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
              id="here-ref"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  BADGER Price:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-158"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $80.00
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  Cycle: 
                  5894
                    
                  (last: 0h 55m)
                </span>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  Ethereum
                   TVL:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-161"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $1,000,000
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  My Assets:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-164"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $0
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
              >
                <div
                  class="MuiBox-root-157 MuiBox-root-176"
                  title="Historic APR"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                  >
                    My APR:  
                  </span>
                  <div
                    class="MuiBox-root-157 MuiBox-root-179"
                  >
                    <span
                      class="MuiTypography-root-125 makeStyles-helperText-124"
                    >
                      0%
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-justify-content-xs-flex-end-36 MuiGrid-grid-xs-true-51"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-flex-end-36"
          >
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-181 MuiGrid-item-19"
            >
              <img
                alt="Discord Icon"
                class="makeStyles-socialIcon-180"
                src="/assets/icons/discord.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-181 makeStyles-twitter-182 MuiGrid-item-19"
            >
              <img
                alt="Twitter Icon"
                class="makeStyles-socialIcon-180"
                src="/assets/icons/twitter.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-184 MuiLink-underlineHover-186 MuiTypography-colorInherit-147"
                  href="https://docs.badger.com/"
                  rel="noopener"
                  target="_blank"
                >
                  DOCS
                </a>
              </span>
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-governance-183 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-184 MuiLink-underlineHover-186 MuiTypography-colorInherit-147"
                  href="https://snapshot.org/#/badgerdao.eth"
                  rel="noopener"
                  target="_blank"
                >
                  GOVERNANCE
                </a>
              </span>
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-184 MuiLink-underlineHover-186 MuiTypography-colorInherit-147"
                  href="https://forum.badger.finance"
                  rel="noopener"
                  target="_blank"
                >
                  FORUM
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-actions-2"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-auto-50"
          >
            <div
              class="MuiTabs-root-192"
            >
              <div
                class="MuiTabs-scroller-197 MuiTabs-fixed-198"
                style="overflow: hidden;"
              >
                <div
                  class="MuiTabs-flexContainer-194"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206 MuiTab-selected-208"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-212"
                    >
                      VAULTS
                    </span>
                    <span
                      class="MuiTouchRipple-root-279"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-212"
                    >
                      BOOST
                    </span>
                    <span
                      class="MuiTouchRipple-root-279"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-212"
                    >
                      IBBTC
                    </span>
                    <span
                      class="MuiTouchRipple-root-279"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-216 PrivateTabIndicator-colorPrimary-217 MuiTabs-indicator-202 makeStyles-indicator-191"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-220 MuiGrid-container-18 MuiGrid-justify-content-xs-flex-end-36"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-213 MuiButton-root-224 MuiButton-outlined-229 makeStyles-button-221 makeStyles-loadingRewardsButton-223 MuiButton-outlinedPrimary-230"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-225"
                  >
                    <div
                      class="makeStyles-loaderContainer-253 makeStyles-customSizing-255"
                    >
                      <div
                        class="MuiCircularProgress-root-256 MuiCircularProgress-colorPrimary-260 MuiCircularProgress-indeterminate-258"
                        role="progressbar"
                        style="width: 15px; height: 15px;"
                      >
                        <svg
                          class="MuiCircularProgress-svg-262"
                          viewBox="22 22 44 44"
                        >
                          <circle
                            class="MuiCircularProgress-circle-263 MuiCircularProgress-circleIndeterminate-265"
                            cx="44"
                            cy="44"
                            fill="none"
                            r="20.2"
                            stroke-width="3.6"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root-279"
                  />
                </button>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <div>
                  <button
                    aria-label="open network selector"
                    class="MuiButtonBase-root-213 MuiButton-root-224 MuiButton-outlined-229 makeStyles-networkButton-270 MuiButton-outlinedPrimary-230"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-225"
                    >
                      <img
                        alt="selected network icon"
                        class="makeStyles-selectedNetworkIcon-271"
                        src="/assets/icons/ethereum-network.svg"
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root-279"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-213 MuiButton-root-224 MuiButton-outlined-229 MuiButton-outlinedPrimary-230 MuiButton-disableElevation-235"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-225 makeStyles-walletButtonLabel-276"
                  >
                    0x1..a1a
                  </span>
                  <span
                    class="MuiTouchRipple-root-279"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders mobile version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-213 MuiIconButton-root-282 makeStyles-menuIcon-279"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-290"
            >
              <img
                alt="open menu"
                src="/assets/icons/mobile-drawer-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-311"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-280"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-281 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <div>
              <button
                aria-label="open network selector"
                class="MuiButtonBase-root-213 MuiButton-root-224 MuiButton-outlined-229 makeStyles-networkButton-270 MuiButton-outlinedPrimary-230"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-225"
                >
                  <img
                    alt="selected network icon"
                    class="makeStyles-selectedNetworkIcon-271"
                    src="/assets/icons/ethereum-network.svg"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-311"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-213 MuiButton-root-224 MuiButton-outlined-229 MuiButton-outlinedPrimary-230 MuiButton-disableElevation-235"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-225 makeStyles-walletButtonLabel-276"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            BADGER Price:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-300"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $80.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Cycle: 
            5894
              
            (last: 0h 55m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-303"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $1,000,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-306"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $0
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <div
            class="MuiBox-root-157 MuiBox-root-307"
            title="Historic APR"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
            >
              My APR:  
            </span>
            <div
              class="MuiBox-root-157 MuiBox-root-310"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                0%
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-192"
      >
        <div
          class="MuiTabs-scroller-197 MuiTabs-fixed-198"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-194"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206 MuiTab-selected-208 MuiTab-fullWidth-210"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-212"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206 MuiTab-fullWidth-210"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-212"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206 MuiTab-fullWidth-210"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-212"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-216 PrivateTabIndicator-colorPrimary-217 MuiTabs-indicator-202 makeStyles-indicator-191"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders tablet version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-213 MuiIconButton-root-282 makeStyles-menuIcon-279"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-290"
            >
              <img
                alt="open menu"
                src="/assets/icons/mobile-drawer-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-311"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-280"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-281 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <div>
              <button
                aria-label="open network selector"
                class="MuiButtonBase-root-213 MuiButton-root-224 MuiButton-outlined-229 makeStyles-networkButton-270 MuiButton-outlinedPrimary-230"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-225"
                >
                  <img
                    alt="selected network icon"
                    class="makeStyles-selectedNetworkIcon-271"
                    src="/assets/icons/ethereum-network.svg"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-311"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-213 MuiButton-root-224 MuiButton-outlined-229 MuiButton-outlinedPrimary-230 MuiButton-disableElevation-235"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-225 makeStyles-walletButtonLabel-276"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            BADGER Price:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-300"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $80.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Cycle: 
            5894
              
            (last: 0h 55m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-303"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $1,000,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-306"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $0
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <div
            class="MuiBox-root-157 MuiBox-root-307"
            title="Historic APR"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
            >
              My APR:  
            </span>
            <div
              class="MuiBox-root-157 MuiBox-root-310"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                0%
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-291"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-192"
      >
        <div
          class="MuiTabs-scroller-197 MuiTabs-fixed-198"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-194"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206 MuiTab-selected-208"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-212"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-212"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-213 MuiTab-root-203 makeStyles-tab-190 MuiTab-textColorPrimary-206"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-212"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-311"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-216 PrivateTabIndicator-colorPrimary-217 MuiTabs-indicator-202 makeStyles-indicator-191"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
